api/swimos_schema/src/schema/tests/derive/validated_form/and_op_arg_count.stderr
error: At least two arguments must be provided to an AND operator
  --> src/schema/tests/derive/validated_form/and_op_arg_count.rs:20:23
   |
20 |         #[form(schema(and(num_items = 5)))]
   |                       ^^^^^^^^^^^^^^^^^^
